Support configuration of slapd global options (#14).
This configuration is by the server recipe, based on the
configuration defined by the ca_openldap.general_configuration_options hash.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,6 +23,8 @@ suites:
       - recipe[ca_openldap::ppolicy]
     attributes:
       ca_openldap:
+        general_configuration_options:
+          olcAllows: "::delete::"
         populate:
             update_enable: true
         tls:
