Load commonly used LDAP schemas (beside core.ldif): - activate LDAPI protocol to load extra schemas using ldapadd (this can be toggled via some new attribute) - add a Chef definition loading configured core LDAP schemas (like nis.ldif, inetorgperson.ldif, ...) IMPORTANT: loading extra schemas implies to run the "schemas" recipe, right after the "server" one. - update kitchen configuration to run tests on a CentOS 7.2, with appropriate configuration

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,17 +7,17 @@ driver:
 
 
 provisioner:
-  name: chef_solo
+  name: chef_zero
+  log_level: info
 
 platforms:
-  - name: centos-6.5
-    driver:
-      box: opscode-centos-6.5
+  - name: centos-7.2
 
 suites:
   - name: default
     run_list:
       - recipe[ca_openldap::server]
+      - recipe[ca_openldap::schemas]
       - recipe[ca_openldap::dit]
       - recipe[ca_openldap::populate]
       - recipe[ca_openldap::ppolicy]
@@ -29,3 +29,4 @@ suites:
             update_enable: true
         tls:
             enable: "no"
+        slapd_sysconfig_file: "/etc/sysconfig/slapd"
