--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,9 +11,27 @@ provisioner:
   log_level: info
 
 platforms:
-  - name: centos-7.2
+  - name: centos-6.8
+  - name: centos-7.3
 
 suites:
+  - name: el6
+    run_list:
+      - recipe[ca_openldap::server]
+      - recipe[ca_openldap::schemas]
+      - recipe[ca_openldap::dit]
+      - recipe[ca_openldap::populate]
+      - recipe[ca_openldap::ppolicy]
+    excludes:
+      - centos-7.3
+    attributes:
+      ca_openldap:
+        general_configuration_options:
+          olcAllows: "::delete::"
+        populate:
+          update_enable: true
+        tls:
+          enable: "no"
   - name: default
     run_list:
       - recipe[ca_openldap::server]
@@ -21,12 +39,14 @@ suites:
       - recipe[ca_openldap::dit]
       - recipe[ca_openldap::populate]
       - recipe[ca_openldap::ppolicy]
+    excludes:
+      - centos-6.8
     attributes:
       ca_openldap:
         general_configuration_options:
           olcAllows: "::delete::"
         populate:
-            update_enable: true
+          update_enable: true
         tls:
-            enable: "no"
+          enable: "no"
         slapd_sysconfig_file: "/etc/sysconfig/slapd"
