--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,9 +1,7 @@
 ---
 driver:
   name: vagrant
-  require_chef_omnibus: true
-  customize:
-    memory: 1024
+  require_chef_omnibus: 12.19.36
 
 verifier:
   name: inspec
@@ -31,5 +29,7 @@ suites:
           olcAllows: "::delete::"
         populate:
           update_enable: true
+        slapd_listen_addresses:
+          - localhost      
         tls:
           enable: "no"
