Improve 'acl' recipe.
 * manage recent addition of slapd backend support
 * restart slapd only if acls have changed.
 * ensure tests pass for rhel/centos 6.8 and 7.3.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -19,6 +19,7 @@ suites:
     run_list:
       - recipe[ca_openldap::server]
       - recipe[ca_openldap::schemas]
+      - recipe[ca_openldap::acl]
       - recipe[ca_openldap::dit]
       - recipe[ca_openldap::populate]
       - recipe[ca_openldap::ppolicy]
